features added- rearranging, localstorage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/f5a3738bd6.js" crossorigin="anonymous"></script>
     <title>Markdown Notes</title>
   </head>
   <body>
